--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+.zoom-out {
+  animation: zoomOut ease-out 0.5s;
+  -webkit-animation: zoomOut ease-out 0.5s;
+  -moz-animation: zoomOut ease-out 0.5s;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.a-delay-2 {
+  animation-delay: 0.2s;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.a-delay-4 {
+  animation-delay: 0.4s;
+}
+@keyframes zoomOut {
+  0% {
+    transform: scale(0.3, 0.3);
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1, 1);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@-moz-keyframes zoomOut {
+  0% {
+    transform: scale(0.3, 0.3);
+    opacity: 0.7;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    opacity: 1;
+    transform: scale(1, 1);
+  }
+}
+
+@-webkit-keyframes zoomOut {
+  0% {
+    transform: scale(0.3, 0.3);
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1, 1);
   }
 }
